# acwv-solver

./: .gitignore  CMakeLists.txt  Matriz3D.cpp  README.md  camada_dobrada.txt  campos_de_vel.ipynb  double_slit.txt  fonte-central.cpp  fonte.txt  main  main.cpp  nao-reflexiva.cpp  parametros.txt  parametros3d.txt  planos_paralelos.txt  plot.gp  plot2.gp  reservatorio.txt  run.sh  semicirculo.txt  slit.txt
.cache/clangd/index/: Dominio.h.0FF57A772E845494.idx  Grid2d.cpp.D6D07A8A171DB188.idx  Grid2d.h.2E623E5CFD16E0D1.idx  Grid3d.cpp.542D6A133A3F4FDC.idx  Grid3d.h.FB213E4E387E30D7.idx  Solver2d.cpp.4BCA18D899162080.idx  Solver2d.h.859F4E42B4E7FC65.idx  Solver3d.cpp.DF5EA049501D15C7.idx  Solver3d.h.7D7138891052BB77.idx  main.cpp.B5BFC42DB96C015F.idx
.github/workflows/: build.yaml
include/: Domain.h  Dominio.h  Grid2d.h  Grid3d.h  Matriz2d.h  Parameters.h  Solver2d.h  Solver3d.h
scripts/: generate_input.ipynb  plot.gp  requirements.txt  run.sh
src/: Grid2d.cpp  Grid3d.cpp  Matriz2d.cpp  Solver2d.cpp  Solver3d.cpp  main.cpp
